# VorsorgeCoach

./: .gitignore  3a-rechner.skill  COPILOT_INSTRUCTIONS.md  README.md  calculate_projection.py  package.json  pyproject.toml  requirements.txt
.copilot/: SKILLS_SETUP.md  agent-manifest.json  mcp.json  skills.json
.copilot/skills/: README.md
.copilot/skills/Einkauf/: skill.md
.copilot/skills/VorsorgeausweisParsing/: skill.md
.gemini/: settings.json
.github/: copilot-instructions.md
.github/instructions/: 3a.instructions.md  ahv.instructions.md  ausgaben.instructions.md  partner.instructions.md  pdf-style.instructions.md  person.instructions.md  privatvermögen.instructions.md  vorsorge.instructions.md  vorsorgeausweis.instructions.md
docs/: README.md  extract_va.py  implementation-plan.md  va-2025.txt
examples/: README.md  request-bvg_calculate.json  request-bvg_insured_salary.json
mcp-servers/: README.md
outputs/data/: niggeler_dieter_va_2025-12-31.md
outputs/reports/: gen_3a_report.py  generate_rente_kapital.py  vermoegentsentwicklung_niggeler_2026-2034.md
skills/: README.md
skills/Einkauf/: skill.md
tests/: README.md
